@@ -4,7 +4,7 @@ use warnings;
 use 5.010;
 use utf8;
 
-our $VERSION = '3.03';
+our $VERSION = '3.04';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -609,7 +609,7 @@ B<efa-m> [B<-s> I<service>] I<tripid>
 
 =head1 VERSION
 
-version 3.03
+version 3.04
 
 =head1 DESCRIPTION
 
