@@ -10,7 +10,7 @@ use Travel::Status::DE::EFA::Stop;
 
 use parent 'Class::Accessor';
 
-our $VERSION = '3.03';
+our $VERSION = '3.04';
 
 Travel::Status::DE::EFA::Departure->mk_ro_accessors(
 	qw(countdown datetime delay destination is_cancelled key line lineref mot
@@ -283,7 +283,7 @@ departure received by Travel::Status::DE::EFA
 
 =head1 VERSION
 
-version 3.03
+version 3.04
 
 =head1 DESCRIPTION
 
