@@ -9,7 +9,7 @@ use Travel::Status::DE::EFA::Stop;
 
 use parent 'Class::Accessor';
 
-our $VERSION = '3.03';
+our $VERSION = '3.04';
 
 Travel::Status::DE::EFA::Trip->mk_ro_accessors(
 	qw(operator product product_class name line number type id dest_name dest_id)
@@ -148,7 +148,7 @@ trip
 
 =head1 VERSION
 
-version 3.03
+version 3.04
 
 =head1 DESCRIPTION
 
